Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,33 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
+# Customized pipeline
 trigger:
-- master
+- main
 
 pool:
   vmImage: ubuntu-latest
 
+variables:
+  buildConfiguration: Release
+
 steps:
-- script: echo Hello, world!
+- script: echo "Starting the pipeline!"
   displayName: 'Run a one-line script'
 
 - script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
+    echo "Building the project..."
+    echo "Build configuration: $(buildConfiguration)"
   displayName: 'Run a multi-line script'
+
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: $(System.DefaultWorkingDirectory)
+    includeRootFolder: false
+    archiveType: zip
+    archiveFile: $(Build.ArtifactStagingDirectory)/output.zip
+    replaceExistingArchive: true
+  displayName: 'Archive build outputs'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    artifactName: drop
+    pathToPublish: $(Build.ArtifactStagingDirectory)
+  displayName: 'Publish build artifacts'
